# case-insensitive

./: .travis.yml  CHANGELOG  LICENSE  NEWS  README.markdown  case-insensitive.cabal  case-insensitive.nix  default.nix  shell.nix
Data/: CaseInsensitive.hs
Data/CaseInsensitive/: Internal.hs  Unsafe.hs
bench/: NoClass.hs  bench.hs
data/: pg2189.txt
test/: test.hs
