name:          case-insensitive
version:       0.2
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2011 Bas van Dijk
author:        Bas van Dijk
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
category:      Data, Text
synopsis:      Case insensitive string comparison
description:   The module @Data.CaseInsensitive@ provides the 'CI' type
               constructor which can be parameterised by a string-like
               type like: 'String', 'ByteString', 'Text',
               etc.. Comparisons of values of the resulting type will be
               insensitive to cases.

source-repository head
  Type:     darcs
  Location: http://code.haskell.org/~basvandijk/code/case-insensitive

Library
  GHC-Options: -Wall
  build-depends: base                 >= 4     && < 4.4
               , base-unicode-symbols >= 0.1.1 && < 0.3
               , bytestring           >= 0.9   && < 0.10
               , text                 >= 0.3   && < 0.12
  exposed-modules: Data.CaseInsensitive
