name:          case-insensitive
version:       0.4.0.1
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2011 Bas van Dijk
author:        Bas van Dijk
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
homepage:      https://github.com/basvandijk/case-insensitive
bug-reports:   https://github.com/basvandijk/case-insensitive/issues
category:      Data, Text
synopsis:      Case insensitive string comparison
description:   The module @Data.CaseInsensitive@ provides the 'CI' type
               constructor which can be parameterised by a string-like
               type like: 'String', 'ByteString', 'Text',
               etc.. Comparisons of values of the resulting type will be
               insensitive to cases.

extra-source-files: README.markdown

source-repository head
  Type:     git
  Location: git://github.com/basvandijk/case-insensitive.git

Library
  GHC-Options: -Wall
  build-depends: base       >= 3   && < 4.6
               , bytestring >= 0.9 && < 0.10
               , text       >= 0.3 && < 0.12
               , hashable   >= 1.0 && < 1.2
  exposed-modules: Data.CaseInsensitive
