name:          case-insensitive
version:       1.0.0.2
cabal-version: >=1.8
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2011 Bas van Dijk
author:        Bas van Dijk
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
homepage:      https://github.com/basvandijk/case-insensitive
bug-reports:   https://github.com/basvandijk/case-insensitive/issues
category:      Data, Text
synopsis:      Case insensitive string comparison
description:   The module @Data.CaseInsensitive@ provides the 'CI' type
               constructor which can be parameterised by a string-like
               type like: 'String', 'ByteString', 'Text',
               etc.. Comparisons of values of the resulting type will be
               insensitive to cases.

extra-source-files: README.markdown

source-repository head
  Type:     git
  Location: git://github.com/basvandijk/case-insensitive.git

Library
  ghc-options: -Wall
  build-depends: base       >= 3   && < 4.8
               , bytestring >= 0.9 && < 0.11
               , text       >= 0.3 && < 0.12
               , deepseq    >= 1.1 && < 1.4
               , hashable   >= 1.0 && < 1.3
  exposed-modules: Data.CaseInsensitive

test-suite test-case-insensitive
  type:           exitcode-stdio-1.0
  main-is:        test.hs
  hs-source-dirs: test

  build-depends: case-insensitive
               , base                 >= 3     && < 4.8
               , bytestring           >= 0.9   && < 0.11
               , text                 >= 0.3   && < 0.12
               , HUnit                >= 1.2.2 && < 1.3
               , test-framework       >= 0.2.4 && < 0.9
               , test-framework-hunit >= 0.2.4 && < 0.4

  ghc-options: -Wall

benchmark bench-case-insensitive
  type:           exitcode-stdio-1.0
  main-is:        bench.hs
  hs-source-dirs: bench

  ghc-options:    -Wall -O2

  build-depends: case-insensitive
               , base                 >= 3     && < 4.8
               , bytestring           >= 0.9   && < 0.11
               , criterion            >= 0.6.1 && < 0.9
               , deepseq              >= 1.1   && < 1.4
